--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Advait Kalakkad",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
